<resources>
    <string name="app_name">BeYourBet</string>
    <string name="url">http://411bf418.ngrok.io</string>
    <string name="teamTextView">Liste des équipes</string>
    <string name="matchTextView">Liste des match</string>
    <string name="inscriptionButton">Pas encore inscrit ?</string>
    <string name="coinsBet">Jetons pariés</string>
    <string name="connectionButton">Connexion</string>
    <string name="validateInscriptionButton">S\'inscrire</string>
    <string name="connectionPseudo">Pseudo</string>
    <string name="connectionEmail">Email</string>
    <string name="blanckPwd">Veuillez remplir tous les champs</string>
    <string name="connectionEmailConfirmation">Confirmer Adresse Email</string>
    <string name="errorMail">Les deux emails doivent être iddentiques</string>
    <string name="inscriptionSucceded">Vous êtes bien inscrit</string>
    <string name="duplicateEmail">Un utilisateur utilise déjà cette adresse email</string>
    <string name="duplicatePseudo">Un utilisateur utilise déjà ce pseudo</string>
    <string name="errorPwd">Les deux mots de passe doivent être iddentiques</string>
    <string name="connectionPwd">Mot de passe</string>
    <string name="connectionPwdConfirmation">Confirmer Mot de passe</string>
    <string name="remmemberCheckBox">Se souvenir de moi</string>
    <string name="title_activity_match_detail">MatchDetailActivity</string>
    <string name="scoreText">Score</string>
    <string name="gotobetButton">Placer un pari</string>
    <string name="onglet_accueil">Accueil</string>
    <string name="onglet_profil">Mon profil</string>
    <string name="onglet_sport">Sports</string>
    <string name="onglet_social">Social</string>
    <string name="onglet_historique">Historique</string>
    <string name="message_accueil">Ceci est la page d\'accueil</string>
    <string name="betSucces">Votre pari a bien été pris en compte</string>
    <string name="youVoted">Vous avez voté</string>
    <string name="betListView">Liste de mes paris</string>
    <string name="myFriends">Mes amis</string>
    <string name="myWaitingFriends">Mes demandes d\'amis</string>
    <string name="friendText">Nouvel ami</string>
    <string name="friendButton">Nouvel ami</string>
    <string name="unknownUser">Cet utilisateur n\'existe pas</string>
    <string name="invitationSent">Une demande d\'ami a été envoyée</string>
    <string name="modifierProfil">Modifier le profil</string>
    <string name="newPwd">Nouveau mot de passe</string>
    <string name="newPwdConf">Confirmer mot de passe</string>
    <string name="currPwd">Mot de passe actuel</string>
    <string name="newMail">Nouveau mail</string>
    <string name="newMailConf">Confirmer nouveau mail</string>
    <string name="newPseudo">Nouveau Pseudo</string>
    <string name="tmp">Nouveau Pseudo</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
